TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "134539741706416" [label="Start"];
  "134539741706416" -> "134539741693504";
  "134539741693504" [label="Code"];
  "134539741693504" -> "134539741705648";
  "134539741705648" [label="Function"];
  "134539741705648" -> "134539741703824";
  "134539741705648" -> "134539741700368";
  "134539741705648" -> "134539741702576";
  "134539741703824" [label="main IDENTIFIER"];
  "134539741700368" [label="Parameters"];
  "134539741702576" [label="Code"];
  "134539741702576" -> "134539741708192";
  "134539741702576" -> "134539741703296";
  "134539741702576" -> "134539741693792";
  "134539741708192" [label="Code"];
  "134539741708192" -> "134539741705600";
  "134539741705600" [label="Declaration"];
  "134539741705600" -> "134539741704016";
  "134539741705600" -> "134539741705360";
  "134539741704016" [label="x IDENTIFIER"];
  "134539741705360" [label="1 INT"];
  "134539741703296" [label="Code"];
  "134539741703296" -> "134539741704448";
  "134539741704448" [label="Declaration"];
  "134539741704448" -> "134539741706560";
  "134539741704448" -> "134539741701856";
  "134539741706560" [label="x IDENTIFIER"];
  "134539741701856" [label="2 INT"];
  "134539741693792" [label="Return"];
  "134539741693792" -> "134539741694560";
  "134539741694560" [label="0 INT"];
}
